cmake_minimum_required(VERSION 2.5)
project(mymuduo)

#mymuduo最终编译成so动态库，设置动态库的路径，放在根目录的lib文件夹下
set(LIBRARY_OUTPUT_DIRECTORY, ${PROJECT_SOURCE_DIR}/lib)

#设置调试信息  启动c++11语言标准
SET(CMAKE_CXX_FLAGS "-std=c++11 -g")

#定义参与编译的源代码文件
aux_source_directory(. SRC_LIST)

#编译生成动态库mymuduo
add_library(mymuduo SHARED ${SRC_LIST})
